syntax="proto3";

option csharp_namespace = "AspMvcDemo.GrpcProtos";

service AspMvcBookDemo {
    rpc ListBooks(AspMvcBookListBooksRequest) returns (AspMvcBookListBooksReply) {}
}

message AspMvcBookListBooksRequest {
    string content = 1;
}

message AspMvcBookInfo {
    int32 id = 1;
    string title = 2;
    string anthor = 3;
    string content = 4;
}

message AspMvcBookListBooksReply {
    int32 code = 1;
    optional string tip = 2;
    repeated AspMvcBookInfo book = 3;
}